# paradex-cli

./: .env.example  LICENSE  README.md  README.multisig.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
paradex_cli/: __init__.py  account_ops.py  env_config.py  main.py  multisig.py  subkeys.py
paradex_cli/helpers/: account.py  utils.py
tests/: test_account_helpers.py  test_account_ops.py  test_add_guardian.py  test_multisig.py  test_subkeys.py
