[tool.poetry]
name = "paradex-cli"
version = "0.1.4"
description = "CLI for interacting with Paradex API and Paraclear smart contracts"
authors = ["Paradex Team <support@paradex.trade>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
typer = {extras = ["all"], version = "^0.15.2"}
paradex_py = "^0.5.1"
rich = "^14.0.0"

[tool.poetry.scripts]
paradex-cli = "paradex_cli.main:app"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::RuntimeWarning",
    "ignore::DeprecationWarning:eth_utils",
    "ignore::UserWarning:eth_utils",
]
addopts = "-W ignore::RuntimeWarning"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
