[project]
name = "paradex-cli"
version = "0.2.0"
description = "CLI for interacting with Paradex API and Paraclear smart contracts"
authors = [{name = "Paradex Team", email = "support@paradex.trade"}]
license = {text = "MIT"}
requires-python = ">=3.10,<3.13"
dependencies = [
    "typer>=0.15.2",
    "paradex_py>=0.5.5",
    "rich>=14.0.0",
    "python-dotenv>=1.0",
]

[project.scripts]
paradex-cli = "paradex_cli.main:app"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::RuntimeWarning",
    "ignore::DeprecationWarning:eth_utils",
    "ignore::UserWarning:eth_utils",
]
addopts = "-W ignore::RuntimeWarning"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
